# NS2000

./: .gitignore  .venv  flake.nix  insight.jl  languages.jl  list_converter.jl  main.jl  menu_creation.jl  open_courses.jl  pyproject.toml  readme.md  splitting.jl  storage.jl  structs.jl  teach.jl  test_words.jl  write_to_file.jl
backend/: answer.txt  list_converter.jl  list_copier.py  main.jl  menu_creation.jl  question.txt  storage.jl  test_words.jl  write_to_file.jl
backend/words/N5_vocab_english/: answer.txt  question.txt
backend/words/N5_vocab_kana/: answer.txt  question.txt
backend/words/N5_words_english/: answer.txt  question.txt
backend/words/N5_words_kana/: answer.txt  question.txt
backend/words/hiragana_katakana/: answer.txt
backend/words/japanese/: progress.tsv
backend/words/pinhok/: answer.txt
words/: nederlands.txt  svenska.txt
words/N5_vocab_english/: answer.txt
words/N5_words_english/: answer.txt  question.txt
words/N5_words_kana/: answer.txt  question.txt
words/Pinhok/: svenska.txt
words/hiragana_katakana/: english.txt  kanji.txt  question.txt
words/japanese/: answer.txt  english.txt  japanese.txt  progress.tsv
words/jp_N5_kana/: kana.txt  kanji.txt
words/jp_N5_kanji/: english.txt  kanji.txt
words/jp_N5_vocabulary/: english.txt  kanji.txt
