[tool.poetry]
name = "helloyolo8"
version = "0.1.0"
description = ""
authors = ["Daniel Gollings <daniel@sephia.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<=3.11"
selenium = "^4.11.2"
keyboard = "^0.13.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
sections = ['FUTURE', 'STDLIB', 'THIRDPARTY', 'FIRSTPARTY', 'LOCALFOLDER']
